testing/Travis/testcases/prototype/shouldSucceed/Try39.adl
CONTEXT Try39 IN ENGLISH
CLASSIFY A ISA B
RELATION r[A*B]
RELATION s[B*A] [MAP]
ENDCONTEXT